--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile files('libs/okhttp-3.4.0-RC1.jar')
     compile files('libs/okio-1.9.0.jar')
+    compile files('libs/fastjson-1.2.9.jar')
 }
