--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,14 @@ android {
         versionCode 1
         versionName "1.0"
     }
+//    splits {
+//        abi {
+//            enable true
+//            reset()
+//            include 'x86','x86_64','armeabi-v7a'
+//            universalApk true
+//        }
+//    }
     buildTypes {
         release {
             minifyEnabled false
