--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile files('libs/okhttp-3.4.0-RC1.jar')
     compile files('libs/okio-1.9.0.jar')
     compile files('libs/fastjson-1.2.9.jar')
+    compile project(':network')
 }
